k8s/base/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 3012
      targetPort: websocket
      protocol: TCP
      name: websocket
  selector:
    app: vaultwarden
